[PD-115] Power statistics
